# lily

./: .gitignore  Cargo.toml  index.html  lily.rs  lily_core.rs  main.rs  readme.md  still_core.rs  website-b283ea755a19ae82.js  website-b283ea755a19ae82_bg.wasm  website-f6d6dba209cb640b_bg.wasm
compile/: Cargo.toml  lily.rs  lily_core.rs
example/: main.rs  run.still  still.still
example-echo-in-loop/: main.rs  still.still
example-hello-world/: Cargo.toml  main.rs
example-iced-gui/: Cargo.toml  README.md  lily.lily  main.rs
example-just-a-bunch-of-random-stuff/: lily.lily  main.rs  still.still
example-raylib-bouncing-letter/: lily.lily  still.still
example-yew-website/: README.md  lily.lily  main.rs  still.still
social/website/: Cargo.toml  index.html  main.rs  readme.md
tree-sitter/: .gitignore  grammar.js  package.json  tree-sitter.json
tree-sitter/src/: grammar.json  node-types.json  parser.c
vscode/: .gitignore  .vscodeignore  LICENSE  extension.ts  language-configuration.json  package.json  still-0.0.1.vsix  tsconfig.json
vscode/syntaxes/: codeblock.json  still-syntax.json
zed/: Cargo.toml  extension.toml
zed/icon_themes/: lily_icon_theme.json
zed/languages/lily/: brackets.scm  config.toml  highlights.scm
zed/src/: lib.rs
