[package]
name = "website"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "lily_website"
path = "main.rs"

[dependencies]
lily_compile = { path = "../../compile/" }
lsp-types = "0.97.0"
web-sys = { version = "0.3.91", features = [ "Event", "Location", "Window", "History" ] }
yew = { version = "0.23.0", features = [ "csr" ] }
